# ribofinder

./: README.rst  environment.yml  pyproject.toml
.github/workflows/: apptainer.yml  main.yml  pypi.yml
sequana_pipelines/ribofinder/: config.yaml  main.py  ribofinder.rules  schema.yaml  tools.txt
test/: test_main.py
