[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sequana-ribofinder"
version = "1.2.0"
description = "A multi-sample identification of ribosomal content"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/ribofinder"
readme = "README.rst"
keywords = ["snakemake", "ribosomal", "rRNA", "sequana"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = [
    {include = "sequana_pipelines"}
]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
sequana = ">=0.18.0"
sequana_pipetools = ">=1.5.4"
click-completion = "^0.5.2"
sequana-wrappers = "^26.4.7"
snakemake = ">=7.32"
pulp = ">=2.8"

[tool.poetry.scripts]
sequana_ribofinder = "sequana_pipelines.ribofinder.main:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^8.0.0"
mock = "^5.1.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::DeprecationWarning:click_completion",
    "ignore::DeprecationWarning:importlib",
]
asyncio_mode = "auto"
